--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "24.3.0",
     "@types/react": "19.1.12",
     "autoprefixer": "^10.4.20",
